simplify the whole benchmark process 1. remove gradle multi-modules structure 2. remove jib build and use native Dockerfile to build 3. allow to configure gatling JVM configuration 4. pull out the JAVA_TOOL_OPTIONS for JVM application 5. update gradle wrapper to rc version